# sakka

./: Cargo.toml  README.md  justfile
crates/sakka/: Cargo.toml
crates/sakka-derive/: Cargo.toml
crates/sakka-derive/src/: decode.rs  encode.rs  lib.rs
crates/sakka-derive/src/common/: attrs.rs  crate_path.rs  expand.rs  fields.rs  generics.rs  mod.rs
crates/sakka-derive/src/model/: collection_attr.rs  collection_attrs.rs  enum_attrs.rs  enum_info.rs  field_attrs.rs  field_info.rs  ignore_attr.rs  mod.rs  optional_attr.rs  store_attr.rs  struct_attrs.rs  struct_info.rs  type_attrs.rs  type_info.rs
crates/sakka-test/: Cargo.toml
crates/sakka-test/tests/: integration.rs  trybuild.rs
crates/sakka-test/tests/integration/: align.rs  basic.rs  collection.rs  complex.rs  context_store.rs  custom_codec.rs  custom_encoding.rs  custom_encoding_error.rs  custom_error.rs  enum.rs  ignore.rs  magic.rs  optional.rs  padding.rs
crates/sakka-test/tests/trybuild/: alignment_duplicate_attr.rs  alignment_duplicate_attr.stderr  alignment_valid.rs  collection_duplicate_attr.rs  collection_duplicate_attr.stderr  collection_field_not_before.rs  collection_non_vec.rs  (+50 more)
crates/sakka/src/: error.rs  lib.rs
crates/sakka/src/codec/: collection.rs  decode.rs  encode.rs  mod.rs  primitive.rs  tests.rs
crates/sakka/src/codecs/: array.rs  codec.rs  derived.rs  mod.rs  option.rs  tests.rs  vec.rs
crates/sakka/src/common/: alignment.rs  array.rs  endian.rs  mod.rs
crates/sakka/src/encoding/: collection.rs  decode.rs  mod.rs  primitive.rs  tests.rs
crates/sakka/src/rw/: collection.rs  mod.rs  option.rs  primitive.rs  reader.rs  tests.rs  writer.rs
