[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.12"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/sakka"
include = ["src/**", "README.md", "LICENSE*"]

[workspace.dependencies]
sakka = { version = "0.0.12", path = "crates/sakka", default-features = false }
sakka-derive = { version = "0.0.12", path = "crates/sakka-derive" }

pastey = { version = "0.2.3" }
thiserror = { version = "2.0.18", default-features = false }

proc-macro2 = "1.0.106"
proc-macro-crate = "3.5.0"
syn = "2.0.118"
quote = "1.0.46"
